--- a/package.json
+++ b/package.json
@@ -3,13 +3,21 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "npm run lint && ng serve --ssl true",
+    "start": "npm run lint && ng serve --proxy-config proxy.conf.json",
     "build": "ng build",
     "test": "ng test",
+    "coverage": "ng test --code-coverage",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
   "private": true,
+  "husky": {
+    "hooks": {
+      "commit-msg": "echo $HUSKY_GIT_PARAMS",
+      "pre-commit": "npm run lint && npm run test",
+      "pre-push": "npm run lint && npm run test"
+    }
+  },
   "dependencies": {
     "@angular/animations": "^6.0.0",
     "@angular/common": "^6.0.0",
@@ -35,6 +43,7 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.2.1",
+    "husky": "^2.2.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~1.7.1",
@@ -45,6 +54,6 @@
     "protractor": "~5.3.0",
     "ts-node": "~5.0.1",
     "tslint": "^5.12.0",
-    "typescript": "~2.7.2"
+    "typescript": "~2.8"
   }
 }
